<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoPro HERO4 Controller</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="trigger">Trigger</string>
    <string name="tag">Tag</string>
<string name="stop">Stop</string>
<string name="video">Video</string>
<string name="photo">Photo</string>
<string name="multishot">MultiShot</string>
<string name="video2">Video</string>
<string name="looping">Looping</string>
<string name="videophoto">VidPic</string>
<string name="single">Single</string>
<string name="settings">.</string>
<string name="developed">Developed by Konrad Iturbe (XDA / GITHUB: @KonradIT | /u/konrad-iturbe)</string>
<string name="midres">1080p</string>
<string name="slowmo">SlowMo</string>
<string name="hd">HD</string>
<string name="modevideovideo">Video</string>
<string name="modevideolooping">Looping</string>
<string name="modevideovideophoto">VideoPhoto</string>
<string name="modephotosingle">Single pic</string>
<string name="modephotocontinuous">Continuous</string>
<string name="modephotonight">Nightpic</string>
<string name="modemsburst">Burst</string>
<string name="modemstimelapse">Timelapse</string>
<string name="modemsnightlapse">NightLapse</string>
<string name="protuneON">PT ON</string>
<string name="protuneOFF">PT OFF</string>
<string name="ETNP2">2sec</string>
<string name="ETNP5">5sec</string>
<string name="ETNP10">10sec</string>
<string name="ETNP15">15sec</string>
<string name="ETNP20">20sec</string>
<string name="ETNP30">30sec</string>
<string name="WideFOV">Wide</string>
<string name="MediumFOV">Medium</string>
<string name="NarrowFOV">Narrow</string>

<!-- List of resolutions -->
 <string name="vidres_prompt">Video resolutions</string>
 
   <!--   <string-array name="vidres_arrays">
        <item>4K 30/4K 15</item>
        <item>2.7K 60/2.7K 30</item>
        <item>1440p 100/1440p 30</item>
        <item>1080p 120/1080p 60</item>
        <item>1080p 60/1080p 30</item>
        <item>1080p 30/1080p 24</item>
        <item>720p 240/720p 120</item>
        <item>WVGA 240</item>
    </string-array> -->
</resources>
