<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chernowii.goprohero4.MainActivity" >

<Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView7"
        android:onClick="sendTrigger"
        android:layout_marginTop="22dp"
        android:text="@string/trigger" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="16dp"
        android:onClick="sendTag"
        android:text="@string/tag" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignRight="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="16dp"
        android:onClick="sendStop"
        android:text="@string/stop" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button05"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="22dp"
        android:rowCount="6" >
    </GridLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/developed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button05"
        android:layout_alignBottom="@+id/Button05"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/Button04"
        android:onClick="sendVideo"
        android:text="@string/video" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button02"
        android:layout_marginTop="47dp"
        android:onClick="sendMultishot"
        android:text="@string/multishot" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button03"
        android:layout_alignBottom="@+id/Button03"
        android:layout_toLeftOf="@+id/Button05"
        android:onClick="sendPhoto"
        android:text="@string/photo" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/Button05"
        android:layout_alignRight="@+id/textView7"
        android:onClick="sendSlowMo"
        android:text="@string/slowmo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toLeftOf="@+id/Button05"
        android:layout_toRightOf="@+id/button2"
        android:onClick="sendMidres"
        android:text="@string/midres" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendHD"
        android:text="@string/hd" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button4"
        android:scrollbars="horizontal" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TableRow>

               <Button
                   android:id="@+id/button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/Button03"
                   android:layout_marginTop="18dp"
                   android:onClick="sendModeVideoVideo"
                   android:text="@string/modevideovideo" />
  
        <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModeVideoLooping"
        android:text="@string/modevideolooping" />  
               <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:layout_marginRight="0dp"
        android:onClick="sendModeVideoVideoPhoto"
        android:text="@string/modevideovideophoto" />  
  </TableRow>
  <TableRow>
               <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModePhotoSingle"
        android:text="@string/modephotosingle" />  
               <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModePhotoContinuous"
        android:text="@string/modephotocontinuous" />  
               <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModePhotoNight"
        android:text="@string/modephotonight" />  
  </TableRow>
  <TableRow>
      <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModeMSBurst"
        android:text="@string/modemsburst" /> 
          <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendModeMSTimeLapse"
        android:text="@string/modemstimelapse" /> 
          <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendMSNightLapse"
        android:text="@string/modemsnightlapse" /> 
  </TableRow>
  <TableRow>
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Button03"
        android:layout_marginRight="41dp"
        android:text="Video resolution: " />
  </TableRow>
  <TableRow>
       <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
         />
       
  </TableRow>
  <TableRow>
      <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Button03"
        android:layout_marginRight="41dp"
        android:text="Protune: " />
      </TableRow>
      <TableRow>
      <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:onClick="sendProtuneON"
        android:text="@string/protuneON" /> 
          <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendProtuneOFF"
        android:text="@string/protuneOFF" /> 
           
  </TableRow>
  <TableRow>
      <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Button03"
        android:layout_marginRight="41dp"
        android:text="NightLapse: " />
  </TableRow>
  <TableRow>
      <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP2"
        android:text="@string/ETNP2" /> 
           <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP5"
        android:text="@string/ETNP5" /> 
        <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP10"
        android:text="@string/ETNP10" /> 
        
        </TableRow>
        
        <TableRow>
            <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP15"
        android:text="@string/ETNP15" /> 
        <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP20"
        android:text="@string/ETNP20" /> 
        <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendETNP30"
        android:text="@string/ETNP30" /> 
  </TableRow>
  <TableRow>
            <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Button03"
        android:layout_marginRight="41dp"
        android:text="Video FOV: " />
  </TableRow>
  <TableRow>
              <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendNarrowFOV"
        android:text="@string/NarrowFOV" /> 
                <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendMediumFOV"
        android:text="@string/MediumFOV" /> 
                <Button
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="18dp"
        android:onClick="sendWideFOV"
        android:text="@string/WideFOV" /> 
  </TableRow>
        </TableLayout>
    </ScrollView>


</RelativeLayout>
